# IdleGPU

./: .gitignore  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  pyproject.toml  requirements.in  requirements.txt
agent/: __main__.py  config.py  connection.py  cuda_channel.py  cuda_driver.py  cuda_executor.py  frame.py  idle_monitor.py  nvenc_executor.py  pki.py  transparency_log.py
agent/defaults/: agent.toml
broker/: __init__.py  __main__.py  app.py  config.py  cuda_router.py  frame.py  pki.py  registry.py
broker/defaults/: __init__.py  broker.toml
shim/: CMakeLists.txt
shim/include/: cuda_compat.h  idlegpu_shim.h
shim/src/: cuda_init.c  cuda_mem.c  cuda_module.c  cuda_stream.c  ipc.c  nvenc.c  real_cuda.c  shim_main.c  stubs.c
sidecar/: Dockerfile  __main__.py  config.py  cuda_bridge.py  docker-compose.example.yml  frame.py  ipc_codec.py  ipc_server.py  pki.py
