[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "idlegpu"
version = "0.1.0"
description = "IdleGPU — idle GPU detection and forwarding daemon"
license = { text = "AGPL-3.0-or-later" }
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    # GPU utilization via NVIDIA Management Library (pip name changed in 2023;
    # the import name remains "pynvml" at runtime)
    "nvidia-ml-py>=12.0",
    # CPU and RAM utilization
    "psutil>=5.9",
    # Agent WebSocket connection to broker (mTLS added in Phase 2)
    "websockets>=12.0",
    # Broker REST API and WebSocket server; also used for agent dev status endpoint
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]

# CLI entry points added when agent/__main__.py and broker/__main__.py are implemented.
# [project.scripts]
# idlegpu-agent  = "agent.__main__:main"
# idlegpu-broker = "broker.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent*", "broker*"]

[tool.setuptools.package-data]
# Bundle the default config so importlib.resources can locate it at runtime.
"agent.defaults" = ["*.toml"]
