[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "idlegpu"
version = "0.1.0"
description = "IdleGPU — idle GPU detection and forwarding daemon"
license = { text = "AGPL-3.0-or-later" }
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    # GPU utilization via NVIDIA Management Library (pip name changed in 2023;
    # the import name remains "pynvml" at runtime)
    "nvidia-ml-py>=12.0",
    # CPU and RAM utilization
    "psutil>=5.9",
    # Agent WebSocket connection to broker
    "websockets>=12.0",
    # Broker REST API and WebSocket server; also used for agent dev status endpoint
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    # mTLS certificate generation and HMAC signing (Phase 2)
    "cryptography>=42.0",
    # TOML serialisation -- used to write [tls] paths back to config files after
    # `broker setup` and `agent enroll` (tomllib in stdlib only reads, not writes)
    "tomli-w>=1.0",
    # Binary serialisation for the CUDA channel frame payload.
    # The broker routes msgpack-encoded frames verbatim; agent and sidecar decode.
    "msgpack>=1.0",
]

[project.scripts]
idlegpu-agent   = "agent.__main__:main"
idlegpu-broker  = "broker.__main__:main"
idlegpu-sidecar = "sidecar.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent*", "broker*", "sidecar*"]

[tool.setuptools.package-data]
# Bundle default configs so importlib.resources can locate them at runtime.
"agent.defaults" = ["*.toml"]
"broker.defaults" = ["*.toml"]
